--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -162,32 +162,32 @@ h1,h2,h3,h4,h5,h6{
 						<p>Shipping Information:</p>
 						<hr>
 						<div class="form-field">
-							<input class="form-control" type="text" name="FirstName" placeholder="First Name..">
+							<input class="form-control" type="text" name="FirstName" placeholder="First Name.." required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="LastName" placeholder="Last Name..">
+							<input class="form-control" type="text" name="LastName" placeholder="Last Name.." required>
 						</div>
 
 						<div class="form-field">
-							<input class="form-control" type="text" name="Email" placeholder="Email..">
+							<input class="form-control" type="text" name="Email" placeholder="Email.." required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="PhoneNumber" placeholder="Phone Number..">
+							<input class="form-control" type="text" name="PhoneNumber" placeholder="Phone Number.."required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="country" placeholder="Country..">
+							<input class="form-control" type="text" name="country" placeholder="Country.."required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="address" placeholder="address..">
+							<input class="form-control" type="text" name="address" placeholder="address.."required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="City" placeholder="City..">
+							<input class="form-control" type="text" name="City" placeholder="City.." required>
 						</div>
 						<div class="form-field">
-							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+							<input class="form-control" type="text" name="zipcode" placeholder="Zip code.."required>
 						</div>
 						<div class="form-field" style='display:none'>
-							<input class="form-control" type="text" value='{{order.get_cart_total}}' name="amount" placeholder="Amount">
+							<input class="form-control" type="text" value='{{order.get_cart_total}}' name="amount" placeholder="Amount" required>
 						</div>
 					</div>
 
