--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -197,10 +197,10 @@ h1,h2,h3,h4,h5,h6{
 					<div class="form-field">
 						<div class="row">
 						<div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="momo"> MTN</label>
+							<label><input type="radio" name="Radio" value="momo" required> MTN</label>
 						</div>
 						<div class="col-sm-8">
-							<label><input type="radio" name="Radio" value="cc"> CREDIT CARD</label>
+							<label><input type="radio" name="Radio" value="cc" required> CREDIT CARD</label>
 						</div>
 						</div>
 					</div>
