--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -109,7 +109,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-grpkm0axo one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic1.jpg"%}" alt="scooterrental-vehicles-pic1" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic1.JPG"%}" alt="scooterrental-vehicles-pic1" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										
@@ -125,7 +125,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-rrpfgwgpk one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic2.jpg"%}" alt="scooterrental-vehicles-pic2" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic2.JPG"%}" alt="scooterrental-vehicles-pic2" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										
