--- a/users/templates/Addnewproduct.html
+++ b/users/templates/Addnewproduct.html
@@ -42,6 +42,14 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label class="control-label">Product Descriptions</label>
+                                                    <textarea type="text" class="form-control" name="description"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="panel-footer text-right">
                                         <button class="btn btn-block btn-success" type="submit">Submit</button>
