--- a/users/templates/products.html
+++ b/users/templates/products.html
@@ -57,8 +57,8 @@
                                             <td>{{product.inStock}}</td>
                                             
                                             <td>
-                                                <div class="btn btn-primary">Update</div>
-                                                <div class="btn btn-danger">Delete</div>
+                                                <a href="{% url 'updateProduct' product.id %}"><button class="btn btn-primary">Update</button></a>
+                                                <a onclick="return confirm('Are you sure you want to delete this?')" href="{% url 'delete_product' product.id %}"><button class="btn btn-danger">Delete</button></a>
                                             </td>
                                             
                                         </tr>
