--- a/users/templates/website/product_page.html
+++ b/users/templates/website/product_page.html
@@ -292,15 +292,12 @@ h1,h2,h3,h4,h5,h6{
                                                 <br style="clear:both;" />
                                                 <div itemprop="description">
                                                     <p>
-                                                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+													{{product.description}}
                                                     </p>
                                                 </div>
                                                     <button data-product="{{product.id}}" data-stock="{{product.inStock}}" data-action="add" class="single_add_to_cart_button button alt update-cart">
                                                         Add to cart
                                                     </button>
-                                                <div class="product_meta">
-                                                    <span class="posted_in">Category: <a href="product_category_page.html" rel="tag">Posters</a>.</span>
-                                                </div>
                                                 
                                             </div>
 
