--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -14,13 +14,13 @@
                     <div class="form-field">
 						<div class="row">
 						<div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="all" checked > all time</label>
+							<label><input type="radio" name="Radio" value="all" checked > all time.</label>
 						</div>
 						<div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="daily" > Daily</label>
+							<label><input type="radio" name="Radio" value="daily" > Daily.</label>
 						</div>
                         <div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="weekly"> Weekly</label>
+							<label><input type="radio" name="Radio" value="weekly"> Weekly.</label>
 						</div>
 						</div>
 					</div>
