--- a/users/templates/Receipt.html
+++ b/users/templates/Receipt.html
@@ -34,6 +34,7 @@
                                     <thead>
                                         <tr>
                                             <th class="text-left">ID</th>
+                                            <th>Customer</th>
                                             <th>MeterNUmber</th>
                                             <th>Amount</th>
                                             <th>Littre</th>
@@ -48,6 +49,7 @@
                                     {% for history in page_obj %}
                                     <tr>
                                             <td><a class="btn-link" href="#">{{history.id}}</a></td>
+                                            <td>{{history.Meternumber.customer.FirstName}} {{history.Meternumber.customer.LastName}}</td>
                                             <td>{{history.Meternumber}}</td>
                                             <td>{{history.Amount}} Rwf</td>
                                             <td>{{history.Amount}}Ltr</td>
