--- a/users/templates/blogview.html
+++ b/users/templates/blogview.html
@@ -22,7 +22,7 @@
                                         <div class="btn-group">
                                             <div class="form-group">
                                         <form class="form-inline my-2 my-lg-0" action="{% url 'Viewblog'%}">
-                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Names" class="form-control" autocomplete="off">
+                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by title" class="form-control" autocomplete="off">
                                         <button class="btn btn-success my-2 my-sm-0" type="submit">Search
                                         {% comment %} <i class="fa fa-search"></i> {% endcomment %}
                                         </button>
