--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -60,7 +60,7 @@
                                                     <input type="text" class="form-control" name="Cell"required>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-12">
+                                            <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Meter Number</label>
                                                     <select class="form-control" name="Meternumber"required>
@@ -72,6 +72,17 @@
                                                        
                                                     </select>  
                                                 </div>
+                                            </div>
+                                             <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="control-label">Language</label>
+                                                    <select class="form-control" name="Language"required>
+                                                       <option value="">Select preferably Language</option> 
+                                                       <option value="English">English</option> 
+                                                       <option value="Français">Français</option> 
+                                                       <option value="Kinyarwanda">Kinyarwanda</option> 
+                                                    </select>                                                
+                                            </div>
                                             </div>
                                             <div class="col-sm-12">
                                                  <div class="form-group">
