--- a/users/templates/website/waiting.html
+++ b/users/templates/website/waiting.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+  {% load static %}
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -41,10 +42,11 @@
     <body>
       <div class="card">
       <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
-        <i class="checkmark">✓</i>
+        <img src="{% static "web/images/wait.gif" %}" style="height:200px; widtth:200px;">
       </div>
-        <h1>Success</h1> 
-        <p>Please wait for your confirmation message<br/></p>
+      <br><br>
+      <h1>Please Wait</h1>
+        
 
         <a href="{% url 'index' %}">
         <button style="margin-top:20px;" type="button" class="btn btn-primary">OK</button>
