--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -438,7 +438,7 @@
                                         <a href="{% url 'imgbackgroundview' %}">
                                             <i class="fa fa-mobile"></i>
                                             <span class="menu-title">
-                                                <strong>Image background</strong>
+                                                <strong>background changes</strong>
                                                 
                                             </span>
                                         </a>
