--- a/users/templates/imagebackground.html
+++ b/users/templates/imagebackground.html
@@ -17,7 +17,7 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                    <a href="{% url 'backgroundchange' %}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
+                                    {% comment %} <a href="{% url 'backgroundchange' %}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a> {% endcomment %}
 
                                         <div class="btn-group">
                                             
