--- a/users/templates/Installament.html
+++ b/users/templates/Installament.html
@@ -46,25 +46,36 @@
                                             <th>Outstanding Amount</th>
                                             <th>Balance Paid</th>
                                             <th>Overdue Balance</th>
-                                            <th>Due date</th>
                                             <th>Month Overdue</th>
+                                            <th>Due date</th>
                                         </tr>
                                     </thead>
+                                    
                                     <tbody>
                                     {% for sub in subscriptions %}
-                                    {% widthratio sub.get_total_amount 12 1 as MonthlyPayment %}
+                                    {% with payment=sub.get_total_amount|div:12 %}
+                                    {% widthratio sub.get_overdue_months 1 payment as overdueBalance %}
                                     <tr>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
                                             <td>{{sub.From}}</td>
                                             <td>{{sub.Category.Title}}</td>
                                             <td>{{sub.get_total_amount|intcomma}} Rwf</td>
-                                            <td> {{ MonthlyPayment|intcomma }} Rwf</td>                                           
+                                            {% if sub.get_total_amount|divisibleby:12%}
+                                            <td> {{ payment|intcomma }} Rwf</td>                                           
+                                            {% else %}
+                                            <td> {{ payment|add:1|intcomma }} Rwf</td>                                           
+                                            {% endif %}
                                             <td>{{sub.TotalBalance|intcomma }} Rwf</td>
                                             <td>{{sub.get_total_amount| sub:sub.TotalBalance }}</td>
-                                            <td>0</td>
+                                            {% if sub.get_total_amount|divisibleby:12%}
+                                            <td>{{overdueBalance}} Rwf</td>                                           
+                                            {% else %}
+                                            <td> {{ payment|add:1|mul:sub.get_overdue_months|intcomma }} Rwf</td>                                           
+                                            {% endif %}
+                                            <td>{{sub.get_overdue_months}}</td>
                                             <td>{{sub.To}}</td>
-                                            <td>0</td>
                                     </tr>
+                                    {% endwith %}
                                     {% endfor %}
                                     
                                 
