--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -102,7 +102,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">0 RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
 					                        </div>
 					                    </div>
@@ -184,7 +184,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">0 RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
 					                        </div>
 					                    </div>
@@ -266,7 +266,7 @@
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
-					                            <p class="text-2x mar-no text-semibold">0 RWF</p>
+					                            <p class="text-2x mar-no text-semibold">{{overdue_amount}} RWF</p>
 					                            <p class="mar-no">Total Amount Overdue</p>
 					                        </div>
 					                    </div>
