--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -258,7 +258,7 @@ h1,h2,h3,h4,h5,h6{
                     <div class="section">
                         <div class="section_wrapper clearfix">
                             <div class="items_group clearfix">
-                                <div class="column one woocommerce-content">
+                                <div class="column two woocommerce-content">
                                    
                                     <div class="products_wrapper isotope_wrapper">
                                         <ul class="products grid">
