--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -38,6 +38,7 @@
                                             <th class="text-left">ID</th>
                                             <th>Email</th>
                                             <th>Phone Number</th>
+                                            <th>Action</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -46,6 +47,10 @@
                                             <td><a class="btn-link" href="#">{{user.id}}</a></td>
                                             <td>{{user.email}}</td>
                                             <td>{{user.phone}}</td>
+                                            <td><a onclick="return confirm('Are you sure you want to disable this?')" href="{% url 'reset_password' user.id %}">
+                                                <button class="btn btn-warning">Disable</button>
+                                                </a>
+                                            </td>
                                     </tr>
 
                                     {% endfor %}
