--- a/users/templates/update_customer.html
+++ b/users/templates/update_customer.html
@@ -39,31 +39,31 @@
                                             <div class="col-sm-3">
                                                 <div class="form-group">
                                                     <label class="control-label">Province</label>
-                                                    <input type="text" class="form-control" name="Province" required value={{updatecustomer.IDnumber}}>
+                                                    <input type="text" class="form-control" name="Province" required value={{updatecustomer.Province}}>
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
                                                 <div class="form-group">
                                                     <label class="control-label">District</label>
-                                                    <input type="text" class="form-control" name="District"required value={{updatecustomer.IDnumber}}>
+                                                    <input type="text" class="form-control" name="District"required value={{updatecustomer.District}}>
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
                                                 <div class="form-group">
                                                     <label class="control-label">Sector</label>
-                                                    <input type="text" class="form-control"name="Sector"required value={{updatecustomer.IDnumber}}>
+                                                    <input type="text" class="form-control"name="Sector"required value={{updatecustomer.Sector}}>
                                                 </div>
                                             </div>
                                             <div class="col-sm-3">
                                                 <div class="form-group">
                                                     <label class="control-label">Cell</label>
-                                                    <input type="text" class="form-control" name="Cell"required value={{updatecustomer.IDnumber}}>
+                                                    <input type="text" class="form-control" name="Cell"required value={{updatecustomer.Cell}}>
                                                 </div>
                                             </div>
-                                             <div class="col-sm-6">
+                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Language</label>
-                                                    <select class="form-control" name="Language"required value={{updatecustomer.Language}}>
+                                                    <select class="form-control" name="Language" required selected={{updatecustomer.Language}}>
                                                        <option value="">Select preferably Language</option> 
                                                        <option value="English">English</option> 
                                                        <option value="Kinyarwanda">Kinyarwanda</option> 
