--- a/users/templates/tools.html
+++ b/users/templates/tools.html
@@ -41,6 +41,7 @@
                                             <th>Amount</th>
                                             <th>Description</th>
                                             <th>created at</th>
+                                            <th>Actions</th>
                                             
                                             
                                         </tr>
@@ -54,6 +55,14 @@
                                             <td>{{tool.Amount}}</td>
                                             <td>{{tool.Description}}</td>
                                             <td>{{tool.created_at}}</td>
+                                            <td>
+                                                <a href="{% url 'update_tool' tool.id %}">
+                                                    <button class="btn btn-primary" title="Update"><i class='fa fa-pencil'></i></button>
+                                                </a>
+                                                {% comment %} <a href=onclick="return confirm('Are you sure you want to delete this?')" href="{% url 'delete_tools' tool.id %}">
+                                                    <button class="btn btn-danger" title="Delete"><i class='fa fa-trash'></i></button>
+                                                </a> {% endcomment %}
+                                            </td>
 
                                            
                                             
